ppsspp (1.19.3-1deepin1) unstable; urgency=medium

  * support loongarch64 riscv64 mips64

 -- lhdjply <lhdjply@126.com>  Mon, 11 Aug 2025 11:08:03 +0800

ppsspp (1.19.3-1~25.04~ppa1) plucky; urgency=medium

  * New upstream release
  * debian/patches/ffmpeg_disable-inline-asm.patch: disable inline asm optimization

 -- Xu Zhen <xuzhen@fastmail.com>  Mon, 14 Jul 2025 19:33:23 +0800

ppsspp (1.19.2-1~25.04~ppa1) plucky; urgency=medium

  * New upstream release
  * debian/patches/ffmpeg_disable-inline-asm.patch: disable inline asm optimization

 -- Xu Zhen <xuzhen@fastmail.com>  Mon, 16 Jun 2025 20:12:38 +0800

ppsspp (1.19.1-1~25.04~ppa1) plucky; urgency=medium

  * New upstream release
  * debian/patches/ffmpeg_disable-inline-asm.patch: disable inline asm optimization

 -- Xu Zhen <xuzhen@fastmail.com>  Tue, 10 Jun 2025 21:26:19 +0800

ppsspp (1.19.0-1~25.04~ppa2) plucky; urgency=medium

  * debian/patches/android.patch: add missing android files

 -- Xu Zhen <xuzhen@fastmail.com>  Fri, 06 Jun 2025 22:57:20 +0800

ppsspp (1.19.0-1~25.04~ppa1) plucky; urgency=medium

  * New upstream release
  * debian/patches/ffmpeg_disable-inline-asm.patch: disable inline asm optimization

 -- Xu Zhen <xuzhen@fastmail.com>  Fri, 06 Jun 2025 21:23:13 +0800

ppsspp (1.18.1-1~25.04~ppa1) plucky; urgency=medium

  * Build for 25.04

 -- Xu Zhen <xuzhen@fastmail.com>  Sat, 21 Dec 2024 22:49:16 +0800

ppsspp (1.18.1-1~24.10~ppa1) oracular; urgency=medium

  * New upstream release
  * debian/patches/miniupnpc.patch: Fix FTBFS
  * debian/patches/ffmpeg_disable-inline-asm.patch: disable inline asm optimization

 -- Xu Zhen <xuzhen@fastmail.com>  Tue, 05 Nov 2024 19:28:30 +0800

ppsspp (1.18.0-1~24.10~ppa1) oracular; urgency=medium

  * New upstream release
  * debian/patches/miniupnpc.patch: Fix FTBFS
  * debian/patches/ffmpeg_disable-inline-asm.patch: disable inline asm optimization

 -- Xu Zhen <xuzhen@fastmail.com>  Mon, 04 Nov 2024 21:01:20 +0800
