@@ -1,2 +1,0 @@
-#!/bin/sh
-echo "usr/games/PPSSPPSDL usr/games/ppsspp-sdl"
